Fix some styling and interaction issues that were occurring on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -90,6 +90,7 @@ margin-top: 40px;
 	transition: all 0.2s ease;
 	opacity: 0;
 	text-align: right;
+	cursor: pointer;
 	.inner-text {
 		position: absolute;
 		bottom: 0;
@@ -157,15 +158,20 @@ footer{
 	}
 	.social-block {
 		text-align: center;
-		padding: 20px 0;
+		padding: 15px 0;
+		margin-bottom: 20px;
 		height: 150px;
 		position: relative;
+		cursor: pointer;
 		h3{
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			margin: 0 auto;
+			@media screen and (min-width: 768px){
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				margin: 0 auto;
+			}
+			text-align: center;
 		}
 		&.youtube{
 			&:hover {
